# zaychik

./: .gitignore  Cargo.toml  build.gradle.kts  docker-compose.yml  schema.sql  settings.gradle.kts
.cargo/: config.toml
.github/workflows/: build.yml  gradle.yml  release.yml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
src/: config.rs  constans.rs  main.rs  prelude.rs  tests.rs
src/commands/: avatar.rs  button_roles.rs  external_apis.rs  info.rs  mod.rs  ping.rs  random.rs  react_roles.rs  settings.rs
src/database/: utils.rs
src/database/entities/: button_roles.rs  mod.rs
src/event_handlers/: button_roles.rs  mod.rs  reaction_roles.rs
src/main/kotlin/zaychik/: Config.kt  Main.kt  Zaychik.kt  ZaychikModule.kt
src/main/kotlin/zaychik/commands/: Command.kt  ExecutableCommand.kt  ReactRole.kt  SlashCommand.kt
src/main/kotlin/zaychik/commands/abstracts/: AppCommand.kt  Command.kt  ExecutableCommand.kt  SlashCommand.kt
src/main/kotlin/zaychik/commands/app/: AppCommandCompanion.kt  ApplicationCommand.kt  CreateReactRoleAppCommand.kt  DeleteReactRolesAppCommand.kt  ViewReactRolesAppCommand.kt
src/main/kotlin/zaychik/commands/contextual/: ApplicationCommand.kt  ContextualCommand.kt  CreateReactRoleAppCommand.kt  CreateReactRoleContextCommand.kt  ReactRole.kt  ReactRoleContextCommand.kt  ViewReactRolesAppCommand.kt
src/main/kotlin/zaychik/commands/slash/: ButtonRoleCreateSlashCommand.kt  CatSlashCommand.kt  UserInfoSlashCommand.kt
src/main/kotlin/zaychik/db/: ZaychikDatabase.kt
src/main/kotlin/zaychik/db/entities/: ButtonRole.kt  ReactRole.kt
src/main/kotlin/zaychik/db/tables/: ButtonRoles.kt  ReactRolesTable.kt
src/main/kotlin/zaychik/extensions/: Kord.kt  exposed.kt  koin.kt
src/main/kotlin/zaychik/utils/: Kord.kt  ZaychikEmoji.kt
src/main/resources/: logback.xml
src/structs/: mod.rs  saucenao.rs
src/structs/entities/: common.rs
src/structs/tables/: mod.rs  react_roles.rs
src/traits/: as_i64.rs  bot_emotes.rs  mod.rs
src/utils/: database.rs  mod.rs  paginator.rs  simple_paginator.rs
src/utils/paginators/: embed_paginator.rs  mod.rs
