cargo-features = ["profile-rustflags"]

[package]
name = "zaychik"
version = "0.0.17"
publish = false
rust-version = "1.68"
edition = "2021"
authors = ["TenkoSpirit"]

[profile.release]
strip = true
lto = "thin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-trait = "0.1.59"
rand = "0.8.5"
serde_json = "1.0.89"
anyhow = "1.0.66"
nanoid = "0.4.0"
regex = "1.7.0"


[dependencies.figment]
version = "0.10"
features = ["toml", "env"]

[dependencies.tokio]
version = "1.23.0"
features = ["macros", "rt-multi-thread"]

[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["macros", "postgres", "runtime-tokio-rustls"]

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = [
    "builder",
    "cache",
    "chrono",
    "collector",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
]

[dependencies.poise]
version = "0.5.1"

[dependencies.reqwest]
version = "0.11.13"
features = ["json"]

[dependencies.serde]
version = "1.0.149"
features = ["derive"]
